packages/error/test/helpers/throw-inherited-error.js
const InheritedError = require('./inherited-error');

module.exports = () => {
  throw new InheritedError('message', 'code');
};
